5.4.0 -> 5.4.1:
    - proyvind: fix return code for ignored signals breaking ie. rpmbuild with
	gnome-terminal (mdvbz#62262)
    - proyvind: add tools/dbconvert for rpmdb conversion to/from hash/btree &
	little/big endian (to handle upgrade/downgrade to/from older rpm versions)
    - jbj: remove fsync(2) after file install, its intolerably slow.
    - jbj: simplify the lookup3.c valgrind logic.
    - devzero2000: merge Suse patch. Set "%_specfile" macro in the build so that people can 
      do specfile manipulation/data extraction in the build.
    - proyvind: rpmdb: set and create default log directory so that it doesn't
	get changed ie. when installing to a fresh chroot and no DB_CONFIG
	exists, with transaction logs ending up in a path that changes later.
    - proyvind: perl: fix typo breaking RPM::Transaction->problems().
    - devzero2000: Fix null requirement produced by mono-find-requires
      by Silvan Calarco
    - proyvind: fix noarch sub-packages not having it's corresponding platform
	tag (mdvbz#61746).
    - proyvind: lookup3: fix runtime valgrind check and make it local.
    - eveith: rb: Make Ruby classes participate in GC process
    - jbj: omp: use a thread team solely for file digests to avoid overhead.
    - jbj: rpmns: use binary search for name space lookup.
    - jbj: rpmns: optimize out strlen() calls on depsolver fast path.
    - jbj: drd: disable digest/libelf races for now. todo++.
    - jbj: drd: disable path/tag data races for now. todo++.
    - jbj: ugid: use the re-entrant user/group lookups.
    - jbj: valgrind: empty macros for *everything* to see the namespace.
    - jbj: mongo: stub-in mongo:// and mongodb:// URI's.
    - jbj: verify: overlap header-only signature/digest with file digests.
    - jbj: prelink: thread-safe helper instantiation for valgrind drd.
    - jbj: consistent calloc-like behavior for memory pool items.
    - jbj: omp: include <omp.h> everywhere.
    - jbj: drd: attempt mempool annotations for valgrind drd.